# trading-api

./: .excalidraw  .gitignore  AUTHORS.rst  CHANGELOG.md  Pipfile  README.md  docker-compose.yaml  pyproject.toml
docs/: conf.py
src/trading_api/: __init__.py  app.py  cli.py  database.py  env.py  trading_api.py
src/trading_api/models/: model.py  training_parameters.py
src/trading_api/routers/: __init__.py  symbol.py
src/trading_api/static/: styles.css
src/trading_api/tasks/: task.py
src/trading_api/templates/: home.html  index.html  symbol.html
tests/: __init__.py  test_trading_api.py
